Use Scoped Arenas in Java 25 ExternalSQLite
Signed-off-by: kshackleton1 <kshackleton1@bloomberg.net>